# cartogram-cpp

./: .gitignore  .tags  CMakeLists.txt  README.md  run.sh  test.sh
cartogram_generator/: blur_density.cpp  blur_density.h  cartogram_info.cpp  cartogram_info.h  cgal_typedef.h  check_topology.cpp  check_topology.h  fill_with_density.cpp  fill_with_density.h  flatten_density.cpp  flatten_density.h  geo_div.cpp  geo_div.h  geojson_to_csv.cpp  inset_state.cpp  inset_state.h  main.cpp  map_state.cpp  map_state.h  matrix.cpp  matrix.h  project.cpp  project.h  read_csv.cpp  read_csv.h  read_geojson.cpp  read_geojson.h  rescale_map.cpp  rescale_map.h  simplify_test.cpp  smyth_projection.cpp  smyth_projection.h  write_eps.cpp  write_eps.h  write_to_json.cpp  write_to_json.h
include/: inset_state.h
sample_data/: Zero_belgium_population2019.csv  japan_population_na.csv
simplify-test/: CMakeLists.txt  simplify_test.cpp
src/: blur_density.cpp  cgal_typedef.cpp  cgal_typedef.h  fill_with_density.cpp  geo_div.cpp  geo_div.h  inset_state.cpp  inset_state.h  main.cpp  parse_arguments.cpp  write_eps.cpp  write_eps.h  write_ps.cpp
src/inset_state/: flatten_density.cpp  inset_state.cpp  quadtree.cpp  quadtree.h  rescale_map.cpp  (+1 more)
timeout-files/: algeria.geojson  argentina.geojson  belarus.geojson  canada.geojson  iceland.geojson  inset_algeria.csv  inset_argentina.csv  inset_belarus.csv  inset_canada.csv  inset_guyana.csv  inset_iceland.csv  inset_libya.csv  inset_paraguay.csv  inset_thailand.csv  inset_ukraine.csv  inset_washington.csv  paraguay.geojson  ukraine.geojson
(+1 files in other folders)
